--- a/BaasBoxNet/BaasBoxNet.csproj
+++ b/BaasBoxNet/BaasBoxNet.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BaasBoxConfig.cs" />
     <Compile Include="BaasBoxDocuments.cs" />
     <Compile Include="BaasBoxUserManagement.cs" />
+    <Compile Include="BaasFiles.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Exceptions\BaasApiException.cs" />
     <Compile Include="Exceptions\BaasException.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="IBaasBoxCollections.cs" />
     <Compile Include="IBaasBoxDocuments.cs" />
     <Compile Include="IBaasBoxUserManagement.cs" />
+    <Compile Include="IBaasFiles.cs" />
     <Compile Include="Models\BaasBoxResponse.cs" />
     <Compile Include="Models\BaasDocument.cs" />
     <Compile Include="Models\BaasServerError.cs" />
